Fix z-index top 1 user

--- a/public/css/leaderboard.css
+++ b/public/css/leaderboard.css
@@ -51,7 +51,6 @@
 /* Top Positions Styling */
 .user-info.top1 {
   transform: scale(1.1);
-  z-index: 2;
   background: linear-gradient(135deg, #ffd700 0%, #ffac33 100%);
   color: #ffffff;
   padding: 30px;
